# shinycomponent

./: .eslintrc  .gitattributes  .gitignore  README.md  pyrightconfig.json
js/: .eslintrc  .gitignore  .stylelintrc.json  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tsconfig.json
py/: .gitignore  LICENSE  MANIFEST.in  Makefile  pyrightconfig.json  setup.cfg
py/examples/cards/: app.py
py/examples/components/: app.py
py/examples/dataframe/: app.py
py/examples/datagrid/: app.py
py/examples/ebird-dashboard/: app.py  gather-data.py  requirements.txt  scratch.py
py/examples/ml/: app.py
py/examples/number/: app.py
py/examples/puffins/: app.py
py/examples/sidebar-plot/: app.py
py/examples/static/: app.py  explore.py
py/examples/veritas-dashboard/: app.py  requirements.txt
py/shiny_component/: __init__.py
py/shinycomponent/: __init__.py  _cards.py  _components.py  _dashboard.py  _dataframe.py  _datagrid.py  _grids.py  _htmldeps.py  _layout_elements.py  _m3.py  _observable_plot.py  _page.py  _render_dataframe.py  _render_datagrid.py  _sidebar.py  _tabs.py  _utils.py  _value_box.py  forge.py  ml.py  www
py/shinycomponent/concept/www/: package.json  tsconfig.json
py/shinycomponent/concept/www/src/: color-picker.tsx  components.ts  greeting-card.ts  make_input_binding.ts  make_value_change_emitter.ts  set_el_attr.ts  sidebar.ts  simple-number-input.ts  tabset.ts  theme-chooser.ts
quarto/: .gitignore  README.md  components.qmd  example.qmd  example_simple.qmd  scratch.py  shiny-server.qmd
r/: .Rbuildignore  DESCRIPTION  (+3 more)
(+145 files in other folders)
