[metadata]
name = shinycomponent
version = attr: shinycomponent.__version__
author = Your Name
author_email = youremail@yourdomain.com
url = https://github.com/wch/shinycomponent
description = An example Shiny component.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
packages = find_namespace:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    htmltools
tests_require =
    pytest>=3
zip_safe = False

[options.extras_require]
dev =
    black>=23.1.0
    flake8>=6.0.0
    isort>=5.10.1
    pyright>=1.1.308
    wheel

[options.packages.find]
include = shinycomponent, shinycomponent.*

[options.package_data]
shinycomponent = py.typed

[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# W503: Line break occurred before a binary operator
ignore = E302, E501, W503
extend_exclude = docs, .venv, venv, typings, build

[isort]
profile=black
skip=
    __init__.py
    typings/
    .venv
    venv
    .tox
    build
